        Don't highlight active tab
        Round slider
        Sunken scrollviews
        Sunken appearance set to soft
5. Allow all bar flat and raised tabs to bol coloured.
6. Only save appearance settings if different from default.

0.61.4
------
1. Make squared scrollview appearance consistent when round is set to none.
2. Fix missing pixels in squred progressbars with inverted gradient.

0.61.3
------
1. Allow QtCurve's colours to be overriden if the style name
   starts with the application name. Fixes Pidgin's tab labels.
   
0.61.2
------
1. Fix setting of options if no qtcurvestylerc is found!
2. Allow QtCurve's colours to be overriden - but only if stylename is
   empty. Fixes SooperLooperGUI's background.
3. Fix border of tabs.
4. If KDE_SESSION_VERSION is not set, but KDE_FULL_SESSION is, then
   use KDE/Qt3 settings.

0.61.1
------
1. Fix setting of default style.
2. Fix position of dark part of sunken lines.
3. Read in custom gradients and shades from any system config file.

0.61
----
 1. Only draw coloured border for moused-over items if they are enabled!
 2. Fix slight redraw errors with scrolbar slider when using flat buttons.
 3. Add option to draw line after frameless groupbox title.
 4. Add option to use faded lines (toolbar separators, menutitem separators,
    etc.)
 5. Fix mis-painted pixels on selected tab.
 6. Custom gradient fix where "," is used for decimal - thanks to
    Cedric Bellegarde
 7. Default to reading KDE4 settings if KDE_SESSION_VERSION is not set. To
    default to KDE3 instead, call cmake with -DQTC_DEFAULT_TO_KDE3=true
 8. Fix reading in of Qt4 tooltip colours.
 9. Don't allow QtCurve's colours to be overriden.
10. Make 'filled focus' fill the complete widget for buttons and combos.
11. Use button text colour for combo boxes.
12. Add 'none' to toolbar handles and splitters style.
13. Fix reading of KDE4 toolbar style.
14. Change defaults:
        Button effect: Shadow
        Mouse over: Glow